[package]
name = "async-merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
sha2 = "0.10.8"
fast-merkle-tree = { git = "https://github.com/anoushk1234/fast-merkle-tree.git" }
rayon = "1.8.0"
fast-math = "0.1.1"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = {version="1.34.0",features=["rt","macros"]}
